Fix line 22 in index.html, 404.html and main_func.py so that menubar overlaps the page content. - add "fixed-top" - change "navbar-expand-lg" to "navbar-expand-md"

--- a/css/style_common.css
+++ b/css/style_common.css
@@ -4,6 +4,8 @@
 	font-family: 'Cherry Swash', cursive;
 	opacity: 0.85;
 	/* margin: 0 auto; */
+	z-index: 1;
+	height: 50px;
 }
 .container {
 	width: 500px;
